Data infra , Domain,  Update MVC for new Context

--- a/NetCore.Mvc/appsettings.json
+++ b/NetCore.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "UniversityDBConnection": "Server=Localhost;Database=UniversityDBIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityDBConnection": "Server=Localhost;Database=UniversityDBIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDbData": "Server=Localhost;Database=UniversityDbData;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
