--- a/NetCore.Mvc/NetCore.Mvc.csproj
+++ b/NetCore.Mvc/NetCore.Mvc.csproj
@@ -16,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetCore.Data\NetCore.Data.csproj" />
+    <ProjectReference Include="..\NetCore.Ioc\NetCore.Ioc.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
 </Project>
