--- a/NetCore.Api/appsettings.json
+++ b/NetCore.Api/appsettings.json
@@ -1,15 +1,13 @@
 ﻿{
+  "ConnectionStrings": {
+    "UniversityDBConnection": "Server=Localhost;Database=UniversityDBIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "UniversityDbData": "Server=Localhost;Database=UniversityDbData;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
+
